--- a/src/style2.css
+++ b/src/style2.css
@@ -21,15 +21,15 @@ ol, ul {
   background: #fff;
   border: 1px solid #999;
   float: left;
-  font-size: 24px;
+  font-size: 54px;
   font-weight: bold;
   line-height: 34px;
-  height: 34px;
+  height: 74px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 34px;
+  width: 74px;
 }
 
 .square:focus {
@@ -44,6 +44,7 @@ ol, ul {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin-bottom: 200px;
 }
 
 .game-info {
